@@ -1,5 +1,5 @@
 <?php
-// $Id: views_plugin_style_table.inc,v 1.5.2.7 2010-11-16 00:23:17 merlinofchaos Exp $
+// $Id: views_plugin_style_table.inc,v 1.5.2.8 2010-12-08 23:17:31 merlinofchaos Exp $
 /**
  * @file
  * Contains the table style plugin.
@@ -20,6 +20,7 @@ class views_plugin_style_table extends views_plugin_style {
     $options['override'] = array('default' => TRUE);
     $options['sticky'] = array('default' => FALSE);
     $options['order'] = array('default' => 'asc');
+    $options['summary'] = array('default' => '');
 
     return $options;
   }
@@ -163,6 +164,13 @@ class views_plugin_style_table extends views_plugin_style {
       '#options' => array('asc' => t('Ascending'), 'desc' => t('Descending')),
       '#default_value' => $this->options['order'],
       '#description' => t('If a default sort order is selected, what order should it use by default.'),
+    );
+
+    $form['summary'] = array(
+      '#type' => 'textfield',
+      '#title' => t('Table summary'),
+      '#description' => t('This value will be displayed as table-summary attribute in the html. Set this for better accessiblity of your site.'),
+      '#default_value' => $this->options['summary'],
     );
 
     // Note: views UI registers this theme handler on our behalf. Your module
