@@ -1,5 +1,5 @@
 <?php
-// $Id: views-view-table.tpl.php,v 1.8.2.1 2010-12-04 00:15:14 merlinofchaos Exp $
+// $Id: views-view-table.tpl.php,v 1.8.2.2 2010-12-08 23:17:31 merlinofchaos Exp $
 /**
  * @file views-view-table.tpl.php
  * Template to display a view as a table.
@@ -18,7 +18,7 @@
  * @ingroup views_templates
  */
 ?>
-<table class="<?php print $class; ?>">
+<table class="<?php print $class; ?>"<?php print $attributes; ?>>
   <?php if (!empty($title)) : ?>
     <caption><?php print $title; ?></caption>
   <?php endif; ?>
