@@ -160,6 +160,7 @@ Views 6.x-3.0-dev
     o #318944 by dereine: Prevent warning in table view when user has no permission to view any fields.
     o #416178 by dereine: Profile field checkboxes did not properly filter false values.
     o #989092 by dereine: Semantic views integration broke grid view a little.
+    o #868972 by dereine: Add a "summary" attribute for accessibility on table and grid styles.
 
 Views 6.x-3.0-alpha3
     o #705668 by dereine: Fix glossary view, add tests for glossary view.
